# op-1-utils

./: .env.sample  README.md  pyproject.toml
scripts/backup/: synth-snapshots.py
src/services/op1_dot_fun/: api.py
src/utils/: audio.py  device.py
