[tool.poetry]
name = "op-1-utils"
version = "0.0.1"
description = ""
authors = ["Will Holley <will@willholley.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poe.tasks.backup-synth-snapshots]
cmd = "python scripts/backup/synth-snapshots.py"
envfile = ".env"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
